# cppxplorers

./: CMakeLists.txt  Justfile  README.md  spack.yaml
.github/workflows/: cpp-tests.yml
book/: book.toml
book/src/: SUMMARY.md  ar_models.md  introduction.md  kf_linear.md  simple_optimizers.md
crates/: CMakeLists.txt
crates/ar_models/: CMakeLists.txt
crates/ar_models/include/: ar.hpp
crates/ar_models/tests/: CMakeLists.txt  test_ar_models.cpp
crates/cuda_hello/: CMakeLists.txt  main.cu  saxpy.cu
crates/kf_linear/: CMakeLists.txt
crates/kf_linear/include/: kf_linear.hpp
crates/kf_linear/tests/: CMakeLists.txt  test_kf_linear.cpp
crates/simple_optimizers/: CMakeLists.txt
crates/simple_optimizers/include/: optimizers.hpp
crates/simple_optimizers/tests/: CMakeLists.txt  test_simple_optimizers.cpp
